--- a/login.css
+++ b/login.css
@@ -15,6 +15,7 @@ body {
 .navbar {
 	width: 100%;
 	height: 5vh;
+	min-height: 48px;
 	padding: 4px;
 	box-sizing: border-box;
 	display: flex;
